[gd_scene load_steps=7 format=2]

[ext_resource path="res://Weapons/Bullet/bullet.png" type="Texture" id=1]
[ext_resource path="res://Images/light_1.png" type="Texture" id=2]
[ext_resource path="res://Weapons/Bullet/BloodParticle.tscn" type="PackedScene" id=3]
[ext_resource path="res://Weapons/Bullet/DebriParticles.tscn" type="PackedScene" id=4]
[ext_resource path="res://Weapons/Bullet/Bullet.gd" type="Script" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.12975
height = 4.17132

[node name="Bullet" type="Area2D"]
collision_layer = 4
collision_mask = 10
script = ExtResource( 5 )
debri_particles = ExtResource( 4 )
blood_particles = ExtResource( 3 )
damage = 18.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.46875 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="QueueFreeTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 2 )
texture_scale = 1.5
energy = 0.4

[connection signal="area_entered" from="." to="." method="_on_Bullet_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="QueueFreeTimer" to="." method="_on_QueueFreeTimer_timeout"]
